[gd_scene load_steps=2 format=3 uid="uid://bvxqy8n7h2r3"]

[ext_resource type="Script" path="res://scripts/StartScreen.gd" id="1"]

[node name="StartScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.0784314, 0.0784314, 0.156863, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 250.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "♔ CHESS2 ♔"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="HighScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "High Score: 0"
horizontal_alignment = 1
modulate = Color(1, 0.843137, 0, 1)

[node name="PlayerNameContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PlayerNameLabel" type="Label" parent="VBoxContainer/PlayerNameContainer"]
layout_mode = 2
text = "Player Name:"

[node name="PlayerNameInput" type="LineEdit" parent="VBoxContainer/PlayerNameContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter your name"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="InstructionsLabel" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "[center]How to Play:[/center]
• Click pieces to select them
• Green dots show valid moves
• Click green dot to move
• Capture the enemy King to win
• ESC to return to menu"
fit_content = true

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="CloseButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Close"